--- a/templates/matched.html
+++ b/templates/matched.html
@@ -12,8 +12,8 @@
     <div class="container d-flex justify-content-center align-items-center vh-100">
         <div class="card p-4 text-center w-50">
             <div class="confetti"></div>
-            <h2 class="text-success">Congratulations!</h2>
-            <p>You have been successfully matched!</p>
+            <h2 class="text-success">Thank you!</h2>
+            <p>You have been successfully put on the pending list!</p>
             <a href="dashboard.html" class="btn btn-success w-100">Go to Dashboard</a>
         </div>
     </div>
